// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="chakra-stack css-qlxuh7"
    >
      <svg
        class="chakra-icon css-g7llvd"
        focusable="false"
        viewBox="0 0 40 16"
      >
        <circle
          cx="1.42857"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="1.42857"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="13.8094"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="13.8094"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="26.1903"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="26.1903"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="38.5716"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="38.5716"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
      </svg>
      <h2
        class="chakra-heading css-16o2lp8"
      >
        My Title
      </h2>
    </div>
    <div
      class="css-1mliti3"
    >
      My Content
    </div>
  </div>
</div>
`;

exports[`renders correctly with colored icon 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="chakra-stack css-qlxuh7"
    >
      <svg
        class="chakra-icon css-wdsqms"
        focusable="false"
        viewBox="0 0 40 16"
      >
        <circle
          cx="1.42857"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="1.42857"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="13.8094"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="13.8094"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="26.1903"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="26.1903"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="38.5716"
          cy="1.42857"
          fill="currentFill"
          r="1.42857"
        />
        <circle
          cx="38.5716"
          cy="13.8097"
          fill="currentFill"
          r="1.42857"
        />
      </svg>
      <h2
        class="chakra-heading css-16o2lp8"
      >
        My Title
      </h2>
    </div>
    <div
      class="css-1mliti3"
    >
      My Content
    </div>
  </div>
</div>
`;

exports[`renders correctly with no icon 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="chakra-stack css-qlxuh7"
    >
      <h2
        class="chakra-heading css-16o2lp8"
      >
        My Title
      </h2>
    </div>
    <div
      class="css-1mliti3"
    >
      My Content
    </div>
  </div>
</div>
`;
